# offline-transcriber

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  SKILLS.md  build_exe.ps1  cloud.py  conftest.py  diarize.py  docx_export.py  gui.bat  gui.py  gui.py.tmp.90032.154920d30a1f  indic.bat  install_context_menu.ps1  live.bat  live.py  logging_setup.py  notes.py  policy.py  pyproject.toml  requirements.txt  search.bat  search.py  setup.ps1  summarize.bat  summarize.py  transcribe.bat  transcribe.py  transcribe_indic.py  uninstall_context_menu.ps1  vocabulary.txt  voices.py  watch.bat  watch.py
.github/workflows/: ci.yml  mobile-apk.yml
docs/: benchmarks.md  code-signing.md  mobile-plan.md
mobile/: README.md
mobile/app/: .gitignore  App.tsx  app.json  metro.config.js  package.json
mobile/app/android/: settings.gradle
mobile/app/android/app/: build.gradle  proguard-rules.pro
mobile/app/android/app/src/main/java/com/offlinetranscribermobile/: MainActivity.kt  MainApplication.kt
mobile/app/android/app/src/main/res/values/: strings.xml
mobile/app/assets/: README.md
mobile/app/ios/: Podfile
mobile/app/ios/OfflineTranscriberMobile/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
mobile/app/ios/OfflineTranscriberMobile.xcodeproj/: project.pbxproj
mobile/app/ios/OfflineTranscriberMobile.xcodeproj/xcshareddata/xcschemes/: OfflineTranscriberMobile.xcscheme
scripts/: benchmark.py  build_exe.ps1  gui.bat  gui_entry.py  indic.bat  live.bat  search.bat  set_key.bat  setup.ps1  sign_exe.ps1  summarize.bat  transcribe.bat  watch.bat
tests/: test_cloud.py  test_diarize.py  test_metrics.py  test_notes.py  test_policy.py  test_voices.py
transcriber/: __init__.py  __main__.py  cloud.py  diarize.py  docx_export.py  gui.py  live.py  metrics.py  notes.py  paths.py  policy.py  search.py  setup_key.py  summarize.py  transcribe.py  transcribe_indic.py  voices.py  watch.py
