[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "offline-transcriber"
version = "0.1.0"
description = "Offline-first transcription for every Indian language + English: Whisper GUI/CLI, live capture, speaker diarization with voice memory, local meeting notes."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Himanshu Sharma", email = "himanshu.sharma@eko.co.in" }]
keywords = ["transcription", "whisper", "speech-to-text", "diarization",
            "offline", "indian-languages", "hindi", "subtitles"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Abstract runtime dependencies (lower bounds). Exact, reproducible pins live
# in requirements.txt. torch/torchaudio/speechbrain power local diarization.
dependencies = [
    "faster-whisper>=1.0",
    "customtkinter>=5.2",
    "tkinterdnd2>=0.4",
    "sounddevice>=0.4",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "speechbrain>=1.0",
    "torch>=2.1",
    "torchaudio>=2.1",
]

[project.optional-dependencies]
# secure API-key storage, only needed if the (opt-in) cloud boost is used
cloud = ["keyring>=24"]
# AI4Bharat IndicConformer engine (indic.bat)
indic = ["transformers>=4.40"]
# document export
docx = ["python-docx>=1.1"]
# developer tooling
dev = ["pytest>=8", "ruff>=0.5", "mypy>=1.8"]
# standalone .exe build (scripts/build_exe.ps1)
build = ["pyinstaller>=6"]

[project.urls]
Homepage = "https://github.com/himanshusharma75035-sudo/offline-transcriber"
Issues = "https://github.com/himanshusharma75035-sudo/offline-transcriber/issues"
Security = "https://github.com/himanshusharma75035-sudo/offline-transcriber/blob/main/SECURITY.md"

[project.scripts]
transcribe = "transcriber.transcribe:main"
transcribe-gui = "transcriber.gui:main"
transcribe-live = "transcriber.live:main"
transcribe-watch = "transcriber.watch:main"
transcribe-notes = "transcriber.summarize:main"
transcribe-search = "transcriber.search:main"
transcribe-indic = "transcriber.transcribe_indic:main"

[tool.setuptools]
packages = ["transcriber"]

[tool.setuptools.package-data]
transcriber = ["data/*.txt"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E402: several modules add the script dir to sys.path before importing
# siblings (they run as loose scripts, not an installed package).
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
